# busquery

./: README.md
.github/workflows/: build.yml
back/: Cargo.toml  Dockerfile  README.md  compose-dev-server.yaml  setup.sql
back/.github/workflows/: build.yml
back/src/: main.rs
back/src/helpers/: db.rs  env_check.rs  mod.rs
back/src/routes/: add_business.rs  get_business.rs  index.rs  mod.rs  remove_business.rs  update_business.rs  v.rs
front/: README.md  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json
front/components/: Businesses.vue  Icon.vue  Search.vue  Spinner.vue
front/composables/: dateFormat.ts  getSavedBusinesses.ts  index.d.ts
front/content/: municipalities.json
front/pages/: index.vue  saves.vue
front/public/: kommuner.json
front/public/fonts/Montserrat-Alt1/: Montserrat-Alt1.css
