[package]
name = "busquery-api"
version = "0.3.2"
edition = "2021"
publish = false
authors = ["Kristian Fredrik Rognsvaag <kf@krirogn.dev>"]
description = "The REST API for the Busquery web application"
repository = "https://github.com/krirogn/busquery"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql"] }
colored = "2.0.0"
dotenvy = "0.15.7"
spinners = "4.1.0"
actix-cors = "0.6.4"
